index now acknowledges my presence

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 				<!-- padding -->
 				<a href="http://github.com/zuckermann" class="list-group-item">Leo</a>
                                 <!-- padding -->				
+				<a href="http://github.com/sherifnada" class="list-group-item">Sherif</a>
+
 			</div>
 
 		</div>
