trying to make a conflict happen

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<a href="http://github.com/kannanmohan" class="list-group-item">kannan</a> 
 				<a href="http://github.com/RappinKraken" class="list-group-item">Jose</a>
 				<!-- padding -->
-				<a href="http://github.com/zuckermann" class="list-group-item">Leo</a>
+				<a href="http://github.com/zuckermann" class="list-group-item">Leooooo</a>
                                 <!-- padding -->				
 				<a href="http://github.com/sherifnada" class="list-group-item">Sherif</a>
 
